# waypoint

./: .dockerignore  .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  CAST_RETRY_SYSTEM.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCKER_HUB.md  Dockerfile  LICENSE  MIGRATION_PLAN.md  Makefile  ONCHAIN_EVENTS_BACKFILL.md  README.md  REDIS_FIX.md  TEST_STRATEGY.md  biome.json  build.rs  cliff.toml  clippy.toml  config.toml  docker-bake.hcl  docker-compose.backfill.yml  docker-compose.yml  run-with-metrics.sh  rustfmt.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  docker-publish.yml  docker.yml  release.yml  rust-ci.yml  update-snapchain.yml
.sqlx/: query-0031bb4cc35d04c7fa0f15c66070b99dbb2a15a1194f0029c3e0f01b607ffb84.json  query-06d27fdddf91975b142a69a9d87825aa73607ff49c4b5f8613520f97dabe9bb5.json  query-07caae49fb2b2bd7d319f7eeda7046eaf2498a5d473a4a518573fb167c83dbe0.json  query-0fbec6ca692acaa64370112bac3c84286cded7527d45608195d63a58bf92df5c.json  query-1033b6a54f2282847ca0f9a822abec8603e7e8f51675da55bb8ce39a3f9dee31.json  query-14cf2c337c092546ef7fc8fda322f6c8e407dd25dcc7e2423f1178cfa9a4ce52.json  query-1a77a36712a16fd5a5200bc7b1cc37f28807ca1413409ff8cd11ff8d857c0096.json  query-23a198bc2293339b90eaef9f4465fbf14e49769aa8c28326cb94ad529fa5b339.json  query-2da51687538ea55a7a51543f78325496d75b85e6145f83b65d5d0d1464f998ff.json  query-2e3b994d8b6749ab7c344beae41acfc71dd190886d90a30025faf2820940f2d9.json  query-30576100e0547df570a7cc48ff4940458562dbf2c4898376a93226b845401426.json  query-30e06db44d354fdb38c647d672409f28974067071ed236d0da153f5a2cbdc3d5.json  query-3e8efbe49061acc578f5f41f96e587acda8c142718e056754515ed35ebac519d.json  query-41584b0bae7cb467cb764ab88ef5695ce6d0c98fb1496fcab1580daa2eba1ff6.json  query-42646feccb80751928ddb7748ba7f11a7930d20331ad7be51f04b23fba63bacb.json  query-43fb92c1165c9b14eedf55707dfab405dfc16eef936a0f39d03520856966f6c0.json  query-489ddf443eee2cc64ea87d9de1bd3f14cadfb892e88d7eb627ca25712062a285.json  query-48ee89a50c4158e31c9e70c8a2a50855c956cb18f72c5d17098af7183cb9f741.json  query-4c6d4a29aeded94e18434a9fb4d32034dc6010a6f5827e7d6f6da396bd088c5a.json  query-4d869c1493f9ad05dd1bdd3e748d803fd709132dcf8a2caa0a4d198500fac149.json  query-4dd9247967c119fc10894d0fed2194845b052649b20042b2413de477d9b46034.json  query-5820010749e81c66d06f444fdd00e6d1533691049d88923fbc2f2403d69582bf.json  query-5c4d8cea14e1bd178e673db8c1186246519e4f8e2f09aaa383f9ccea7551d5b2.json  query-5ecc2135270ff9b030f9c7f92984800c2783316844dde93c7535b1d77260ae5e.json  query-638e6ae099d2cf7192f56a3332f1d6ede8b887299b87d895cb9d5e56b483c899.json  query-643d7895c2e075515e1f9878d65246169ff4b144839774e48c6843ad96eb2f37.json  query-6b94303f2cdd002ca4b8bea206757bf4c487f5f59ef78dce64890bfafb8c7b14.json  query-733db5d1482bf9fa7b5c3ada8c56b084667297326fe7c21a26c5aad4789ef1ec.json  query-74f8d9d47626f7837aea407ee1419231c7a20f441bc926a242d5f18263768c0e.json  query-7775ec0e8eed633ea7d073c3673d45d041b626d9eb02093e9fe5fcf579c8774a.json  query-7814209d8475b3607804374f723437fb90b646f3a4a677fe239335083ec375c8.json  query-7903a72c90503c2e5cd6985113a34292660059c0d1e5c47d40aaed1ec166a6af.json  query-7ae29430f290c98b2c7c53771ed7b8ef9d2dd0a10412142fbcbaf22185bdbc32.json  query-7e027171cfeac69d83d31823eec499f7f98d85ebcce27772a1c1c94e5b08f160.json  query-7e89c0a70819592b66126f0808007eab50d222ed546526a7da101b804785b513.json  query-88c3468cfadcbdca6ac72009e047b6e81a58408a71d1e7a41251b3152066603c.json  query-9a1ff52ccd9d372dd83c3f5c3bb196595ea1c66835a355edf30e4e6473d48300.json  query-a531c9570328fb6b0e06ed5eef85e0155883f229d6544df254e2b02ac977e5c8.json  query-a9d37d564163d480e9ab5c039ae06f316caa0958dc31a1e2ccb7862dbe6a8882.json  query-ab18b0b257720c1c498340ed6f765e60f464c79b874b9591725378896af554c4.json  (+22 more)
config/: sample.toml
config/examples/: config.default.toml
docs/: CHANGES.md  README.md  architecture.md  changelog.md  contributing.md  data-architecture.md  development.md  docker-hub.md  ethereum.md  farcaster.md  mcp.md  metrics-setup.md  metrics.md  project-overview.md  shard-migration.md  streaming.md  subscriber.md
examples/: http_https_usage.md  query_thread.sql
grafana/: README.md  docker-compose.yml  grafana.ini
grafana/dashboards/: waypoint-overview.json
migrations/: 001_init.sql  002_add_tier_purchases.sql  003_add_onchain_event_tables.sql  003_add_root_parent_tracking.sql  004_add_lend_storage_table.sql  004_drop_root_parent_columns.sql  005_add_nerfed_users_table.sql  006_add_root_parent_columns.sql  init.sql
scripts/: pre-commit  run-migrations.sh  setup-hooks.sh
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  proto.gen.rs  service.rs  types.rs
src/app/: mod.rs  processor.rs  service.rs  state.rs
src/backfill/: bench.rs  block_reconciler.rs  block_worker.rs  mod.rs  onchain_events.rs  reconciler.rs  root_parent.rs  root_parent_backfill.rs  worker.rs
src/commands/: mod.rs  retry_casts.rs
src/contracts/: id_gateway.rs  id_registry.rs  key_gateway.rs  mod.rs
src/core/: data_context.rs  data_context_tests.rs  mod.rs  normalize.rs  repository.rs  repository_tests.rs  root_parent_hub.rs  types.rs  util.rs
src/database/: batch.rs  client.rs  error.rs  mod.rs  models.rs  providers.rs  repository.rs  repository_impl.rs
src/eth/: client.rs  config.rs  error.rs  keystore.rs  mod.rs  provider.rs  wallet.rs
src/farcaster/: key_manager.rs  mod.rs  register_fid.rs  register_fname.rs  send_message_client.rs  utils.rs
src/health/: mod.rs
src/hub/: circuit_breaker.rs  client.rs  error.rs  filter.rs  mod.rs  providers.rs  stats.rs  stream.rs  subscriber.rs
src/processor/: consumer.rs  database.rs  error.rs  format.rs  mod.rs  print.rs  root_parent_processor.rs  stream.rs  types.rs
src/proto/: blocks.proto  replication.proto
src/query/: casts.rs  error.rs  links.rs  mod.rs  reactions.rs  responses.rs  types.rs  users.rs  utils.rs
src/redis/: client.rs  (+8 more)
tests/: mcp_contract_compat.rs  redis_integration.rs  redis_parse_error_test.rs
(+47 files in other folders)
