[package]
name = "waypoint"
version = "0.4.1"
edition = "2024"
default-run = "waypoint"
rust-version = "1.85.0"
authors = ["Official Unofficial, Inc."]
description = "Waypoint is a Farcaster synchronization tool built in Rust, optimized for memory efficiency."
repository = "https://github.com/officialunofficial/waypoint"
license = "MIT"

[lib]
name = "waypoint"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.40.0", features = ["full", "io-std"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.14" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.7.0"
tonic = { version = "0.12.3", features = ["channel", "transport","tls","tls-roots","tls-webpki-roots"] }
prost = "0.13.3"
futures = "0.3.28"
parking_lot = "0.12.1"
dashmap = "5.5.3"
rayon = "1.8.0"
clap = { version = "4.3.0", features = ["derive"] }
async-trait = "0.1.68"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
thiserror = "1.0.66"
color-eyre = "0.6.3"
sqlx = { version = "0.8.4", features = ["runtime-tokio-rustls", "postgres", "json", "macros", "uuid", "time", "chrono"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
axum = "0.7.9"
bb8-redis = "0.18.0"
bb8 = "0.9.0"
hostname = "0.3.1"
hex = "0.4.3"
blake3 = "1.5.5"
reqwest = "0.12.10"
once_cell = "1.19"
cadence = "1.5.0"
rand = "0.9.1"
rmcp = { version = "0.1.5", features = ["server", "transport-sse-server", "transport-child-process", "transport-io"] }
alloy-primitives = "1.0.0"
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
alloy-signer = "0.14.0"
alloy-signer-local = { version = "0.14.0", features = ["mnemonic"] }
alloy-provider = { version = "0.14.0", features = ["reqwest"] }
alloy-rpc-types-eth = "0.14.0"
coins-bip39 = "0.12.0"
url = "2.3.1"

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
lto = "thin"
codegen-units = 16
