[package]
name = "waypoint"
version = "2026.1.3"
edition = "2024"
default-run = "waypoint"
rust-version = "1.86.0"
authors = ["Official Unofficial, Inc."]
description = "Waypoint is a Farcaster synchronization tool built in Rust, optimized for memory efficiency."
repository = "https://github.com/officialunofficial/waypoint"
license = "MIT"

[lib]
name = "waypoint"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40.0", features = ["full", "io-std"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.14", features = ["io"] }
async-trait = "0.1.68"
futures = "0.3.28"

# Web framework
axum = "0.8.4"

# gRPC & Protobuf
tonic = { version = "0.14.1", features = ["channel", "transport", "tls-native-roots", "tls-webpki-roots"] }
tonic-prost = "0.14.1"
prost = "0.14.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.7.0"

# Database
sqlx = { version = "0.8.4", features = ["runtime-tokio-rustls", "postgres", "json", "macros", "uuid", "time", "chrono"] }

# Redis
fred = { version = "9.1", features = ["enable-native-tls", "partial-tracing", "custom-reconnect-errors", "transactions"] }

# Error handling
thiserror = "1.0.66"
color-eyre = "0.6.3"
error-stack = "0.5.0"

# Logging & Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.17"

# TLS/Crypto
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }

# Configuration
figment = { version = "0.10.19", features = ["env", "toml"] }
dotenvy = "0.15.7"
clap = { version = "4.3.0", features = ["derive"] }

# Data structures & Concurrency
parking_lot = "0.12.1"
dashmap = "5.5.3"
rayon = "1.8.0"
once_cell = "1.19"

# Cryptography & Hashing
blake3 = "1.5.5"
hex = "0.4.3"
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }

# Ethereum/Alloy
alloy-primitives = "1.4.0"
alloy-signer = "1.0.37"
alloy-signer-local = { version = "1.0.37", features = ["mnemonic"] }
alloy-provider = { version = "1.0.37", features = ["reqwest"] }
alloy-rpc-types-eth = "1.0.37"
coins-bip39 = "0.12.0"

# Utilities
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
url = "2.3.1"
rand = "0.9.1"

# HTTP client
reqwest = { version = "0.12.10", features = ["stream"] }

# Metrics
cadence = "1.5.0"

# MCP
rmcp = { version = "0.12.0", features = ["server", "client", "transport-streamable-http-server", "transport-child-process", "transport-io"] }

[build-dependencies]
tonic-prost-build = "0.14.1"

[dev-dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
lto = "thin"
codegen-units = 16